# reformatters

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CITATION.cff  CONVENTIONS.md  LICENSE  README.md  Succeeded      = auto()  cooperative_parallel_writes_plan.md  dpt2m.grib2  lat_lon_sample_avhrr_file.nc  main.py  operational_update_refactor.md  pyproject.toml  pytest.ini  region_job_refactor_plan.md  return read_grib_slice(coord.downloaded_path, coord.get_url_range(), var_name)  tmpclaude-528b-cwd
.cursor/: environment.json
.github/: copilot-setup-steps.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: add_new_variable.md
.github/workflows/: README.md  claude.yml  code-quality.yml  copilot-setup-steps.yml  deploy-operational-updates.yml  deploy-staging.yml  manual-backfill.yml  manual-create-job-from-cronjob.yml  manual-get-jobs.yml  manual-get-pods.yml  manual-list-cronjobs.yml  manual-suspend-resume-cronjobs.yml  notify-stac.yml
common/: combined_future.py  config.py  config_models.py  deploy.py  docker.py  download_directory.py  iterating.py  kubernetes.py  string_template.py  types.py  validation.py  zarr.py
debug_run11/tmp_r1_no_growth_after_initial_write.zarr/: zarr.json
debug_run11/tmp_r2_after_growth.zarr/lead_time/: zarr.json
debug_run11/tmp_r2_after_growth.zarr/valid_time/: zarr.json
debug_run11/tmp_r3_no_growth_since.zarr/: zarr.json
debug_run12/tmp_r2_after_growth.zarr/init_time/: zarr.json
debug_run13/tmp_r1_no_growth_after_initial_write.zarr/temperature_2m/: zarr.json
debug_run13/tmp_r3_no_growth_since.zarr/: zarr.json
debug_run14/tmp_r1_no_growth_after_initial_write.zarr/: zarr.json
debug_run14/tmp_r3_no_growth_since.zarr/temperature_2m/: zarr.json
debug_run5/tmp_refresh1_after_initial_write_no_growth.zarr/: zarr.json
debug_run5/tmp_refresh1_after_initial_write_no_growth.zarr/init_time/: zarr.json
debug_run5/tmp_refresh3_no_growth_since.zarr/: zarr.json
debug_run5/tmp_refresh3_no_growth_since.zarr/init_time/: zarr.json
decode_out/: decode_scan_summary.md
deploy/: Dockerfile  kubernetes_ingest_job.yaml  operational_update.yaml
deploy/aws/: create_new_aws_open_data_bucket.sh  nodepool.yaml
docs/: add_new_variable.md  backfill.md  chunk_shard_layout_tool.md  dataset_development_guide.md  dataset_integration_guide.md  dataset_integration_guide_v0.md  implementation_guide.md  noaa_rrfs_exploration.md  ops_card.md  parallel_processing.md  plan_dataset_staging.md  region_job_refactor_plan.md  source_data_exploration_guide.md  staging.md  validation.md  virtual_datasets.md  webhooks.md
docs/plans/: chirps_source_exploration.md  ecmwf_seas5_source_data_exploration.md  hrrr_18h_virtual_feasibility.md  vertical_dimension_structure.md  vertical_structure_exploration.md  virtual_commit_contention_options.md  virtual_icechunk_datasets.md
docs/plans/vertical_structure_spikes/: spike10_group_coord_inheritance.py  spike1_groups.py  spike2_alias.py  spike3_sparsity.py  spike4_mixed_dims_flat.py  spike5_model_level_availability.py  spike6_hrrr_gefs_levels.py  spike7_ecmwf_levels.py  spike8_icon_eu_levels.py  spike8b_icon_read_one_grib.py  spike9_mrms_levels.py
docs/source_exploration/: eccc_hrdps_continental.md
noaa/: noaa_config_models.py
noaa/gefs/: gefs_config_models.py  read_data.py
noaa/gefs/forecast/: cli.py  config_models.py  read_data.py  reformat.py  template.py  template_config.py
plans/: ecmwf_aifs_ens_exploration.md  hrrr_historical_investigation_report.md  issue_413_comment.md  nasa-imerg-source-exploration.md  noaa_mrms_source_exploration.md
prototypes/: gfs_icechunk_virtual.py  virtual_grib_gribberish.py  virtual_zarr_icechunk.py  virtual_zarr_icechunk_results.md
reports/: ecmwf-ifs-ens-grib-archive-exploration.md  gfs_icechunk_virtual_prototype.md  nasa_imerg_v8_availability.md  suggested_readme.md
reports/compression_audit_2026-03-07/: compression_audit.md  compression_audit_20260308T023255Z.parquet  compression_audit_20260308T045624Z.parquet
runall_out/: validation_summary.md
scan_out/: manifest_scan_summary.md
src/reformatters/: __main__.py
src/reformatters/common/: betterstack.py  binary_rounding.py  cli.py  config.py  (+44 more)
src/scripts/: check_resource_provisioning.py  chunk_shard_size.py  compression_audit.py  compression_benchmark.py  generate_manual_workflows.py  icechunk_utils.py  imerg_latency_probe.py  plot_comparisons.py  zarr_to_icechunk.py
tests/: chunk_utils.py  chunk_utils_test.py  conftest.py  dataset_helpers.py  datasets_test.py  deploy_test.py  integration.py  xarray_testing.py
tests/common/: betterstack_test.py  common_template_config_subclasses_test.py  datasets_cf_compliance_test.py  deploy_test.py  dynamical_dataset.py  dynamical_dataset_test.py  ecmwf_params.json  grib_test.py  iterating_test.py  logging_test.py  monitoring_test.py  multi_group_template_test.py  operational_run_guard_test.py  rclone_test.py  region_job_test.py  staging_test.py  template_config_test.py  test_binary_rounding.py  test_config.py  test_config_models.py  test_deaccumulation.py  test_download.py  test_failure_injection.py  test_ftp_to_obstore.py  test_ingest_stats.py  test_interpolation.py  test_kubernetes.py  test_parallel_coordination.py  test_parallel_writes.py  test_pydantic.py  test_retry.py  test_shared_memory_utils.py  test_storage.py  test_template_utils.py  test_time_utils.py  test_update_progress_tracker.py  test_validation.py  test_zarr.py  validation_test.py  virtual_multi_group_test.py  (+2 more)
tests/dwd/: example_rclone_copy.ndjson  test_copy_files_from_dwd_ftp.py  test_parse_rclone_log.py
tests/ecmwf/: test_ecmwf_config_models.py  test_ecmwf_grib_index.py  test_ecmwf_utils.py
tests/example/: dynamical_dataset_test.py  region_job_test.py  template_config_test.py
tests/example_materialized/: dynamical_dataset_test.py  region_job_test.py  template_config_test.py
tests/example_virtual/: dynamical_dataset_test.py  region_job_test.py  template_config_test.py
tests/nasa/: nasa_auth_integration_test.py
tests/noaa/: noaa_grib_index_test.py  noaa_utils_test.py
(+1681 files in other folders)
