[project]
name = "reformatters"
version = "0.1.0"
description = "Reformat weather datasets into zarr"
readme = "README.md"
requires-python = ">=3.13"


dependencies = [
    "dask~=2026.0",
    "numba~=0.62",
    "numcodecs~=0.16",
    "numpy~=2.3",
    "obstore~=0.8",
    "pandas~=2.3",
    "pydantic~=2.10",
    "rasterio~=1.5",
    "requests~=2.32",
    "rioxarray~=0.19",
    "s3fs~=2026.0",
    "sentry-sdk~=2.20",
    "typer~=0.12",
    "xarray~=2026.0",
    "zarr==3.1.3",
    "kubernetes~=33.1",
    "icechunk==1.1.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
main = "reformatters.__main__:app"

[dependency-groups]
dev = [
    "cf-xarray>=0.10.10",
    "matplotlib~=3.9",
    "pandas-stubs~=2.2",
    "prek==0.3.0",
    "pyqt6>=6.7.1",
    "pytest~=8.4",
    "pytest-sugar~=1.0",
    "pytest-xdist~=3.8",
    # NOTE: keep this in sync with .pre-commit-config.yaml
    "ruff==0.14.14",
    "ty~=0.0.14",
    "types-requests~=2.32",
]

[tool.ruff.lint]
select = [
    "UP",    # pyupgrade
    "I",     # isort
    "F",     # pyflakes
    "N",     # pep8-naming
    "W",     # pycodestyle warning
    "E",     # pycodestyle error
    "ASYNC", # async
    "S",     # security
    "B",     # bugs
    "A",     # shadowing builtins
    "C4",    # comprehensions
    "T10",   # debugger
    "T20",   # print
    "RUF",   # ruff
    "FURB",  # refurb
    "INP",   # missing __init__.py
    "PIE",   # misc flake8
    "PL",    # pylint
    "PGH",   # pygrep-hooks
    "PTH",   # use pathlib
    "LOG",   # logging
    "G",     # logging format
    "TD",    # todos
    "ICN",   # import conventions
    "ISC",   # implicit string concatenation
    "ANN",   # annotations
    "BLE",   # blind catch exception
    "PYI",   # pyimport
    "PT",    # pytest
    "Q",     # quotes
    "SLF",   # private member access
    "SIM",   # simplify
    "SLOT",  # slots
    "TID",   # tidy imports
    "ARG",   # arguments
    "FLY",   # f-strings
    "NPY",   # numpy
    "PERF",  # performance
    "COM818",# trailing comma in bare tuple
]
ignore = [
    "S101",    # disallow asserts
    "E501",    # line too long (ruff format will handle)
    "W293",    # black line contains whitespace
    "UP046",   # non-pep695-generic-class - defer migration to PEP 695 generics
    "UP047",   # non-pep695-generic-function - defer migration to PEP 695 generics
    "PLC0414", # import aliases to same name - we use to specifically re-export
    "PLR0913", # too many arguments
    "TD003",   # don't require issue link in todos
    "PTH123",  # allow `open`
    "G004",    # allow f-string in logging
    "PLR2004", # magic value used in comparison
    "SIM300",  # allow comparisons with constants in any order
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "SLF",     # private member access
    "ARG001",  # unused function arg
    "ARG005",  # unused lambda arg
]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# Submodule attribute access is a warning (e.g. zarr.abc, sentry_sdk.crons)
possibly-missing-attribute = "warn"
# xarray stubs incomplete - to_zarr overloads not fully typed
no-matching-overload = "warn"
# Subclass method return type covariance is valid Python
invalid-method-override = "warn"

[project.package-data]
reformatters = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = "src/reformatters"
testpaths = ["tests/"]
addopts = "-n auto --dist loadfile --max-worker-restart=0"  # see pytest_xdist_auto_num_workers in conftest.py
markers = [
    "slow: slow running tests.",
    "skip_set_local_zarr_store_base_path: opt out of automatically writing zarrs to a tmp directory during tests",
]
